📦 NEW: store 添加collectModules 模块函数

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # 所有环境默认
 
 # 项目名称
-VUE_APP_PROJECT_NAME=TyCloud
+VUE_APP_PROJECT_NAME=wsy-cli
 
 # 页面 title 前缀
-VUE_APP_TITLE=存证云
+VUE_APP_TITLE=wsy-cli
 
 # 网络请求公用地址
 VUE_APP_API=/api/
