--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "examine": "serve -s dist",
     "build:preview": "NODE_OPTIONS=--max_old_space_size=4096 vue-cli-service build --mode preview",
     "lint": "vue-cli-service lint --fix",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "webpack:production": "vue inspect --mode=production > webpack.production.output.js",
+    "webpack:development": "vue inspect --mode=development > webpack.development.output.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
