--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.18.1",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "dayjs": "^1.8.17",
@@ -24,6 +25,7 @@
     "flex.css": "^1.1.7",
     "fuse.js": "^5.2.3",
     "hotkeys-js": "^3.7.3",
+    "install": "^0.13.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
@@ -48,6 +50,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.2",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "compression-webpack-plugin": "^3.0.1",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.8.0",
@@ -56,6 +59,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
+    "install": "^0.13.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "serve": "^11.3.2",
