--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.1",
     "vue-router": "^3.1.3",
+    "vue-transition.css": "^1.0.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
