--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "flex.css": "^1.1.7",
     "fuse.js": "^5.2.3",
     "hotkeys-js": "^3.7.3",
-    "install": "^0.13.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
@@ -42,6 +41,7 @@
   "devDependencies": {
     "@d2-projects/vue-filename-injector": "^1.1.0",
     "@kazupon/vue-i18n-loader": "^0.5.0",
+    "@types/javascript-state-machine": "^2.4.2",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
@@ -61,6 +61,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "install": "^0.13.0",
+    "javascript-state-machine": "^3.1.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "serve": "^11.3.2",
