--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "webpack:development": "vue inspect --mode=development > webpack.development.output.js"
   },
   "dependencies": {
+    "@types/animejs": "^3.1.2",
+    "animejs": "^3.2.1",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.18.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
