📦 NEW: 添加切换动画配置文件

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # 所有环境默认
 
 # 项目名称
-VUE_APP_PROJECT_NAME=执法视频存证云系统
+VUE_APP_PROJECT_NAME=测试-系统标题位置
 
 # 页面 title 前缀
-VUE_APP_TITLE=wsy-cli
+VUE_APP_TITLE=天翼
 
 # 网络请求公用地址
 VUE_APP_API=/api/
