--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "webpack:development": "vue inspect --mode=development > webpack.development.output.js"
   },
   "dependencies": {
+    "@mojs/core": "^0.288.2",
     "@types/animejs": "^3.1.2",
     "animejs": "^3.2.1",
     "axios": "^0.19.0",
@@ -27,6 +28,7 @@
     "flex.css": "^1.1.7",
     "fuse.js": "^5.2.3",
     "hotkeys-js": "^3.7.3",
+    "i": "^0.3.6",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
