--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "fuse.js": "^5.2.3",
     "hotkeys-js": "^3.7.3",
     "i": "^0.3.6",
+    "install": "^0.13.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "lottie-web": "^5.7.5",
     "lowdb": "^1.0.0",
     "nprogress": "^0.2.0",
     "screenfull": "^5.0.2",
