🐛 FIX: 修改标题和title

--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 # 所有环境默认
 
 # 项目名称
-VUE_APP_PROJECT_NAME=测试-系统标题位置
+VUE_APP_PROJECT_NAME=政务系统基础框架
 
 # 页面 title 前缀
-VUE_APP_TITLE=天翼
+VUE_APP_TITLE=政务系统
 
 # 网络请求公用地址
 VUE_APP_API=/api/
 
 # 仓库地址
-VUE_APP_REPO=https://github.com/d2-projects/d2-admin-start-kit
+VUE_APP_REPO=https://github.com/wsypower/wsy-admin-template
 
 # 国际化配置
 VUE_APP_I18N_LOCALE=zh-chs
